# Ai-Tender-Agent

./: .env.example  .gitignore  README.md  START_HERE.bat  agents.py  company_profile.json  cppp_bulk_fetch.py  dashboard.py  db.py  db_tool.py  email_service.py  models.py  pyproject.toml  run_cppp_fetch.bat  run_dashboard.bat  run_scheduler.bat  scheduler.py  scraper_tool.py  ui_components.py  vector_db.py
pages/: 1_🔍_Tender_Explorer.py  2_🧠_AI_Insights.py  3_📊_Analytics.py  4_🔔_Notifications.py  5_🏢_Company_Profile.py  6_⚙️_Settings.py
scraper/: __init__.py  cppp_scraper.py  pdf_downloader.py
tools/: notification_tool.py  pdf_tool.py
