[project]
name = "tenderai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.1",
    "crewai[tools]>=1.14.4",
    "fastapi>=0.136.1",
    "google-genai>=2.2.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "playwright>=1.59.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "schedule>=1.2.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.57.0",
]
