[project]
name = "tenderai-project"
version = "2.0.0"
description = "AI Tender Intelligence Platform — Enterprise Grade"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.1",
    "crewai[tools]>=1.14.4",
    "fpdf2>=2.7.9",
    "google-genai>=2.2.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "playwright>=1.59.0",
    "plotly>=5.22.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "schedule>=1.2.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.57.0",
    "urllib3>=2.0.0",
]
